--- a/docs/bundles/app.bundle.css
+++ b/docs/bundles/app.bundle.css
@@ -4,9 +4,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src:
-    local('Roboto'),
-    local('Roboto-Regular'), url(/roboto-cyrillic-400-normal.woff2) format('woff2'), url(/roboto-cyrillic-400-normal.woff) format('woff');
+  src: url(/roboto-cyrillic-400-normal.woff2) format('woff2'), url(/roboto-cyrillic-400-normal.woff) format('woff');
   
 }
 
@@ -16,9 +14,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src:
-    local('Roboto Bold'),
-    local('Roboto-Bold'), url(/roboto-cyrillic-700-normal.woff2) format('woff2'), url(/roboto-cyrillic-700-normal.woff) format('woff');
+  src: url(/roboto-cyrillic-700-normal.woff2) format('woff2'), url(/roboto-cyrillic-700-normal.woff) format('woff');
   
 }
 
@@ -28,9 +24,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src:
-    local('Roboto'),
-    local('Roboto-Regular'), url(/roboto-latin-400-normal.woff2) format('woff2'), url(/roboto-latin-400-normal.woff) format('woff');
+  src: url(/roboto-latin-400-normal.woff2) format('woff2'), url(/roboto-latin-400-normal.woff) format('woff');
   
 }
 
@@ -40,9 +34,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 900;
-  src:
-    local('Roboto Black'),
-    local('Roboto-Black'), url(/roboto-latin-900-normal.woff2) format('woff2'), url(/roboto-latin-900-normal.woff) format('woff');
+  src: url(/roboto-latin-900-normal.woff2) format('woff2'), url(/roboto-latin-900-normal.woff) format('woff');
   
 }
 
